--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -4,6 +4,7 @@ add_subdirectory(odm_georef)
 add_subdirectory(odm_meshing)
 add_subdirectory(odm_orthophoto)
 add_subdirectory(odm_texturing)
+add_subdirectory(odm_25dmeshing)
 if (ODM_BUILD_SLAM)
   add_subdirectory(odm_slam)
 endif ()
